--- a/commons/src/main/res/values-el/strings.xml
+++ b/commons/src/main/res/values-el/strings.xml
@@ -641,31 +641,31 @@
     <string name="donate_please">
         <![CDATA[
             Γειά σας,<br><br>
-            Ελπίζω να απολαμβάνετε την εφαρμογή. Δεν περιέχει διαφημίσεις, παρακαλώ υποστηρίξτε την ανάπτυξή της με την αγορά στο <a href="https://play.google.com/store/apps/details?id=com.simplemobiletools.thankyou">Απλά Σας Ευχαριστώ</a>, θα αποτρέψει επίσης την εμφάνιση αυτού του διαλόγου.<br><br>
-            Ευχαριστώ!
+            Ελπίζω να απολαμβάνετε την εφαρμογή. Δεν περιέχει διαφημίσεις, παρακαλώ υποστηρίξτε την ανάπτυξή της με την αγορά στο <a href="https://play.google.com/store/apps/details?id=com.simplemobiletools.thankyou">Απλά Σας Ευχαριστούμε</a>, θα αποτρέψει επίσης την εμφάνιση αυτού του διαλόγου.<br><br>
+            Ευχαριστούμε!
         ]]>
     </string>
     <string name="purchase">Αγορά</string>
-    <string name="update_thank_you">Παρακαλώ ενημερώστε την Απλά Σας Ευχαριστώ στην τελευταία έκδοση</string>
+    <string name="update_thank_you">Παρακαλώ ενημερώστε την Απλά Σας Ευχαριστούμε στην τελευταία έκδοση</string>
     <string name="before_asking_question_read_faq">Πριν κάνετε μια ερώτηση, ελέγξτε τις ρυθμίσεις της εφαρμογής και διαβάστε πρώτα τις Συχνές Ερωτήσεις. Ίσως η λύση υπάρχει εκεί.</string>
     <string name="before_rate_read_faq">Πριν μας αξιολογήσετε, ελέγξτε τις ρυθμίσεις εφαρμογής και διαβάστε πρώτα τις Συχνές Ερωτήσεις. Αν έχετε προβλήματα, ίσως η λύση υπάρχει εκεί.</string>
     <string name="make_sure_latest">Επίσης, βεβαιωθείτε ότι χρησιμοποιείτε την τελευταία έκδοση της εφαρμογής.</string>
     <string name="read_it">Διαβάστε τις</string>
     <string name="read_faq">Συχνές Ερωτήσεις</string>
-    <string name="rate_us_prompt">Γειά σας,\n\nφαίνεται ότι χρησιμοποιείτε αυτήν την εφαρμογή ήδη για αρκετό καιρό, και το εκτιμούμε πραγματικά.\n\nΑν μπορούμε να σας ζητήσουμε μια χάρη, παρακαλούμε αξιολογήστε μας στο Google Play. Αυτό θα μας βοηθούσε πολύ.\n\nΑνεξάρτητα τι αποφασίσατε, δεν θα εμφανιστεί ξανά αυτό το μήνυμα.\n\nΕυχαριστώ!</string>
+    <string name="rate_us_prompt">Γειά σας,\n\nφαίνεται ότι χρησιμοποιείτε αυτήν την εφαρμογή ήδη για αρκετό καιρό, και το εκτιμούμε πραγματικά.\n\nΑν μπορούμε να σας ζητήσουμε μια χάρη, παρακαλούμε αξιολογήστε μας στο Google Play. Αυτό θα μας βοηθούσε πολύ.\n\nΑνεξάρτητα τι αποφασίσατε, δεν θα εμφανιστεί ξανά αυτό το μήνυμα.\n\nΕυχαριστούμε!</string>
     <string name="rate_our_app">Βαθμολογήστε την εφαρμογή μας παρακαλώ :)</string>
-    <string name="thank_you">Σας Ευχαριστώ</string>
+    <string name="thank_you">Σας Ευχαριστούμε</string>
 
     <!-- New app (do not translate anything on the 4th line) -->
     <string name="new_app">
         <![CDATA[
             Γειά σας,<br><br>
-           απλά σας ενημερώνω ότι πρόσφατα κυκλοφόρησε μια νέα εφαρμογή:<br><br>
+           απλά σας ενημερώνουμε ότι πρόσφατα κυκλοφόρησε μια νέα εφαρμογή:<br><br>
             <a href="%1$s">%2$s</a><br><br>
             <a href="%3$s">%4$s</a><br><br>
             <a href="%5$s">%6$s</a><br><br>
             Μπορείτε να την κατεβάσετε πατώντας τον τίτλο.<br><br>
-            Ευχαριστώ
+            Ευχαριστούμε
         ]]>
     </string>
 
@@ -683,16 +683,16 @@
     <string name="simple_music_player">Απλός Music Player</string>
     <string name="simple_notes">Απλές Σημειώσεις</string>
     <string name="simple_sms_messenger">Απλός SMS Messenger</string>
-    <string name="simple_thank_you">Απλά Σας ευχαριστώ</string>
+    <string name="simple_thank_you">Απλά Σας Ευχαριστούμε</string>
     <string name="simple_voice_recorder">Απλή Εγγραφή Φωνής</string>
 
-    <string name="app_launcher_short">App Launcher</string>
+    <string name="app_launcher_short">Εκκινητής εφαρμογών</string>
     <string name="calculator_short">Αριθμομηχανή</string>
     <string name="calendar_short">Ημερολόγιο</string>
     <string name="camera_short">Κάμερα</string>
     <string name="clock_short">Ρολόι</string>
     <string name="contacts_short">Επαφές</string>
-    <string name="dialer_short">Dialer</string>
+    <string name="dialer_short">Πληκτ/γιο Κλήσης</string>
     <string name="draw_short">Ζωγραφική</string>
     <string name="file_manager_short">Αρχεία</string>
     <string name="flashlight_short">Φακός</string>
@@ -700,8 +700,8 @@
     <string name="music_player_short">Μουσική</string>
     <string name="notes_short">Σημειώσεις</string>
     <string name="sms_messenger_short">SMS Messenger</string>
-    <string name="thank_you_short">Σας ευχαριστώ</string>
-    <string name="voice_recorder_short">Voice Recorder</string>
+    <string name="thank_you_short">Σας Ευχαριστούμε</string>
+    <string name="voice_recorder_short">Εγγραφή φωνής</string>
 
     <string name="sideloaded_app">
         <![CDATA[
@@ -735,46 +735,46 @@
         Αν θέλετε επιστροφή χρημάτων οποιαδήποτε στιγμή αργότερα, απλά επικοινωνήστε μαζί μας στη διεύθυνση hello@simplemobiletools.com και θα τα λάβετε.</string>
 
     <!-- Pro comparison (shown in the deprecated free apps) -->
-    <string name="why_upgrade">Get the Pro version now!</string>
-    <string name="why_upgrade_basic_version">Basic</string>
+    <string name="why_upgrade">Λάβετε την Pro έκδοση τώρα!</string>
+    <string name="why_upgrade_basic_version">Βασική</string>
     <string name="why_upgrade_pro_version">Pro</string>
-    <string name="why_upgrade_no_ads">No ads</string>
-    <string name="why_upgrade_no_internet_access">No internet access</string>
-    <string name="why_upgrade_footer">+ 100% Money Back Guarantee</string>
+    <string name="why_upgrade_no_ads">Χωρίς διαφ/σεις</string>
+    <string name="why_upgrade_no_internet_access">Χωρίς πρόσβαση στο internet</string>
+    <string name="why_upgrade_footer">+ 100% Εγγύηση επιστροφής χρημάτων</string>
 
     <!-- Gallery Pro -->
-    <string name="why_upgrade_advanced_photo_editor">Advanced photo editor</string>
-    <string name="why_upgrade_heic_support">HEIC/HEIF file support</string>
-    <string name="why_upgrade_batch_renaming">Advanced batch file renaming</string>
-    <string name="why_upgrade_folder_locking">Individual folder locking</string>
-    <string name="why_upgrade_printing_support">Printing support</string>
+    <string name="why_upgrade_advanced_photo_editor">Προηγμένος επεξεργαστής φωτογραφιών</string>
+    <string name="why_upgrade_heic_support">HEIC/HEIF υποστήριξη αρχείων</string>
+    <string name="why_upgrade_batch_renaming">Προηγμένη μετονομασία αρχείων δέσμης</string>
+    <string name="why_upgrade_folder_locking">Κλείδωμα μεμονωμένων φακέλων</string>
+    <string name="why_upgrade_printing_support">Υποστήριξη εκτύπωσης</string>
 
     <!-- Calendar Pro -->
-    <string name="why_upgrade_time_zone_support">Time zone support</string>
-    <string name="why_upgrade_attendees_emails">Attendees and email reminders</string>
-    <string name="why_upgrade_easy_event_importing">Easy event importing</string>
-    <string name="why_upgrade_new_widgets">New widgets</string>
-    <string name="why_upgrade_duplicate_contact_merging">Improved duplicate contact merging</string>
+    <string name="why_upgrade_time_zone_support">Υποστήριξη ζώνης ώρας</string>
+    <string name="why_upgrade_attendees_emails">Συμμετέχοντες και υπενθυμίσεις email</string>
+    <string name="why_upgrade_easy_event_importing">Εύκολη εισαγωγή συμβάντων</string>
+    <string name="why_upgrade_new_widgets">Νέα γραφικά στοιχεία</string>
+    <string name="why_upgrade_duplicate_contact_merging">Βελτιωμένη συγχώνευση διπλών επαφών</string>
 
     <!-- Contacts Pro -->
-    <string name="why_upgrade_speed_dial">Speed dial support</string>
-    <string name="why_upgrade_improved_scrollbar">Improved scrollbar</string>
-    <string name="why_upgrade_easy_contact_importing">Easy contact importing</string>
-    <string name="why_upgrade_font_size_customization">Font size customization</string>
-    <string name="why_upgrade_private_contact_sharing">Optional private contact sharing within our apps</string>
+    <string name="why_upgrade_speed_dial">Υποστήριξη γρήγορης κλήσης</string>
+    <string name="why_upgrade_improved_scrollbar">Βελτιωμένη γραμμή κύλισης</string>
+    <string name="why_upgrade_easy_contact_importing">Εύκολη εισαγωγή επαφών</string>
+    <string name="why_upgrade_font_size_customization">Προσαρμογή μεγέθους γραμ/σειράς</string>
+    <string name="why_upgrade_private_contact_sharing">Προαιρετική κοινή χρήση ιδιωτικών επαφών στις εφαρμογές μας</string>
 
     <!-- Notes Pro -->
-    <string name="why_upgrade_checklists">Checklists</string>
-    <string name="why_upgrade_different_note_per_widget">Different note and colors per widget</string>
+    <string name="why_upgrade_checklists">Λίστες ελέγχου</string>
+    <string name="why_upgrade_different_note_per_widget">Διαφορετική σημείωση και χρώματα ανά γραφικό συστατικό</string>
 
     <!-- File Manager Pro -->
-    <string name="why_upgrade_date_and_time_format">Date and time format customization</string>
-    <string name="why_upgrade_shortcuts">Home screen shortcuts</string>
-    <string name="why_upgrade_file_compression">File compression support</string>
+    <string name="why_upgrade_date_and_time_format">Προσαρμογή μορφής ημ/νίας και ώρας</string>
+    <string name="why_upgrade_shortcuts">Συντομεύσεις στην Αρχική οθόνη</string>
+    <string name="why_upgrade_file_compression">Υποστήριξη συμπίεσης αρχείων</string>
 
     <!-- Draw Pro -->
-    <string name="why_upgrade_background_color_customization">Background color customization</string>
-    <string name="why_upgrade_file_importing">File importing support</string>
+    <string name="why_upgrade_background_color_customization">Προσαρμογή χρώματος φόντου</string>
+    <string name="why_upgrade_file_importing">Υποστήριξη εισαγωγής αρχείων</string>
 
     <!-- License -->
     <string name="notice">Αυτή η εφαρμογή χρησιμοποιεί τις ακόλουθες βιβλιοθήκες τρίτων για να διευκολύνει τη ζωή μου. Ευχαριστώ.</string>
