--- a/commons/src/main/res/values-ca/strings.xml
+++ b/commons/src/main/res/values-ca/strings.xml
@@ -529,7 +529,7 @@
     <string name="restore_all_files">Restaura tots els fitxers</string>
     <string name="recycle_bin_emptied">La paperea s\'ha buidat correctament</string>
     <string name="files_restored_successfully">El fitxers s\'han restaurat correctament</string>
-    <string name="empty_recycle_bin_confirmation">ASegur que vols buidar la paperera? El fitxer s\'eliminaran definitivament.</string>
+    <string name="empty_recycle_bin_confirmation">Segur que vols buidar la paperera? El fitxer s\'eliminaran definitivament.</string>
     <string name="recycle_bin_empty">La paperera és buida</string>
     <string name="moving_recycle_bin_items_disabled">Moure a la paperara està deshabilitat. Feu servir recuperar</string>
     <string name="show_the_recycle_bin">Mostra la paperera</string>
@@ -735,44 +735,44 @@
          Si voleu un reemborsament en qualsevol moment més tard, només cal que contacteu amb nosaltres a l\'adreça hello@simplemobiletools.com i ho aconseguireu.</string>
 
     <!-- Pro comparison (shown in the deprecated free apps) -->
-    <string name="why_upgrade">Get the Pro version now!</string>
-    <string name="why_upgrade_basic_version">Basic</string>
+    <string name="why_upgrade">Obteniu la versió Pro ara mateix.</string>
+    <string name="why_upgrade_basic_version">Bàsic</string>
     <string name="why_upgrade_pro_version">Pro</string>
-    <string name="why_upgrade_no_ads">No ads</string>
-    <string name="why_upgrade_no_internet_access">No internet access</string>
-    <string name="why_upgrade_footer">+ 100% Money Back Guarantee</string>
+    <string name="why_upgrade_no_ads">Sense anuncis</string>
+    <string name="why_upgrade_no_internet_access">No hi ha accés a Internet</string>
+    <string name="why_upgrade_footer">+ 100% de garantia de devolució</string>
 
     <!-- Gallery Pro -->
-    <string name="why_upgrade_advanced_photo_editor">Advanced photo editor</string>
-    <string name="why_upgrade_heic_support">HEIC/HEIF file support</string>
-    <string name="why_upgrade_batch_renaming">Advanced batch file renaming</string>
-    <string name="why_upgrade_folder_locking">Individual folder locking</string>
-    <string name="why_upgrade_printing_support">Printing support</string>
+    <string name="why_upgrade_advanced_photo_editor">Editor de fotos avançat</string>
+    <string name="why_upgrade_heic_support">Suport als fitxers HEIC / HEIF</string>
+    <string name="why_upgrade_batch_renaming">Canvi de nom del fitxer per lots avançat</string>
+    <string name="why_upgrade_folder_locking">Bloqueig individual de carpetes</string>
+    <string name="why_upgrade_printing_support">Suport d\'impressió</string>
 
     <!-- Calendar Pro -->
-    <string name="why_upgrade_time_zone_support">Time zone support</string>
-    <string name="why_upgrade_attendees_emails">Attendees and email reminders</string>
-    <string name="why_upgrade_easy_event_importing">Easy event importing</string>
-    <string name="why_upgrade_new_widgets">New widgets</string>
+    <string name="why_upgrade_time_zone_support">Suport a la zona horària</string>
+    <string name="why_upgrade_attendees_emails">Assistents i recordatoris per correu electrònic</string>
+    <string name="why_upgrade_easy_event_importing">Importació fàcil d\'esdeveniments</string>
+    <string name="why_upgrade_new_widgets">Ginys nous</string>
 
     <!-- Contacts Pro -->
-    <string name="why_upgrade_duplicate_contact_merging">Improved duplicate contact merging</string>
-    <string name="why_upgrade_speed_dial">Speed dial support</string>
-    <string name="why_upgrade_font_size_customization">Font size customization</string>
-    <string name="why_upgrade_private_contact_sharing">Optional private contact sharing within our apps</string>
+    <string name="why_upgrade_duplicate_contact_merging">S\'ha millorat la combinació de contactes duplicats</string>
+    <string name="why_upgrade_speed_dial">Suport de marcatge ràpid</string>
+    <string name="why_upgrade_font_size_customization">Personalització de la mida del tipus de lletra</string>
+    <string name="why_upgrade_private_contact_sharing">Compartir contactes privats opcionals a les nostres aplicacions</string>
 
     <!-- Notes Pro -->
-    <string name="why_upgrade_checklists">Checklists</string>
-    <string name="why_upgrade_different_note_per_widget">Different note and colors per widget</string>
+    <string name="why_upgrade_checklists">Llistes de comprovació</string>
+    <string name="why_upgrade_different_note_per_widget">Nota i colors diferents per widget</string>
 
     <!-- File Manager Pro -->
-    <string name="why_upgrade_date_and_time_format">Date and time format customization</string>
-    <string name="why_upgrade_shortcuts">Home screen shortcuts</string>
-    <string name="why_upgrade_file_compression">File compression support</string>
+    <string name="why_upgrade_date_and_time_format">Personalització del format de data i hora</string>
+    <string name="why_upgrade_shortcuts">Dreceres de pantalla inicial</string>
+    <string name="why_upgrade_file_compression">Suport de compressió de fitxers</string>
 
     <!-- Draw Pro -->
-    <string name="why_upgrade_background_color_customization">Background color customization</string>
-    <string name="why_upgrade_file_importing">File importing support</string>
+    <string name="why_upgrade_background_color_customization">Personalització del color de fons</string>
+    <string name="why_upgrade_file_importing">Suport per a la importació de fitxers</string>
 
     <!-- License -->
     <string name="notice">Aquesta aplicació fa servir les següents biblioteques de tercers que ens faciliten la feina. Gràcies.</string>
