--- a/commons/src/main/res/values-pl/strings.xml
+++ b/commons/src/main/res/values-pl/strings.xml
@@ -760,44 +760,44 @@
         If you want a refund anytime later, just contact us at hello@simplemobiletools.com and you will get it.</string>
 
     <!-- Pro comparison (shown in the deprecated free apps) -->
-    <string name="why_upgrade">Get the Pro version now!</string>
-    <string name="why_upgrade_basic_version">Basic</string>
+    <string name="why_upgrade">Pobierz wersję Pro już teraz!</string>
+    <string name="why_upgrade_basic_version">Podstawowa</string>
     <string name="why_upgrade_pro_version">Pro</string>
-    <string name="why_upgrade_no_ads">No ads</string>
-    <string name="why_upgrade_no_internet_access">No internet access</string>
-    <string name="why_upgrade_footer">+ 100% Money Back Guarantee</string>
+    <string name="why_upgrade_no_ads">Brak reklam</string>
+    <string name="why_upgrade_no_internet_access">Brak dostępu do Internetu</string>
+    <string name="why_upgrade_footer">+100% gwarancja zwrotu pieniędzy</string>
 
     <!-- Gallery Pro -->
-    <string name="why_upgrade_advanced_photo_editor">Advanced photo editor</string>
-    <string name="why_upgrade_heic_support">HEIC/HEIF file support</string>
-    <string name="why_upgrade_batch_renaming">Advanced batch file renaming</string>
-    <string name="why_upgrade_folder_locking">Individual folder locking</string>
-    <string name="why_upgrade_printing_support">Printing support</string>
+    <string name="why_upgrade_advanced_photo_editor">Zaawansowany edytor zdjęć</string>
+    <string name="why_upgrade_heic_support">Obsługa plików HEIC/HEIF</string>
+    <string name="why_upgrade_batch_renaming">Zaawansowana zmiana nazwy plików w partiach</string>
+    <string name="why_upgrade_folder_locking">Blokowanie poszczególnych folderów</string>
+    <string name="why_upgrade_printing_support">Obsługa drukowania</string>
 
     <!-- Calendar Pro -->
-    <string name="why_upgrade_time_zone_support">Time zone support</string>
-    <string name="why_upgrade_attendees_emails">Attendees and email reminders</string>
-    <string name="why_upgrade_easy_event_importing">Easy event importing</string>
-    <string name="why_upgrade_new_widgets">New widgets</string>
+    <string name="why_upgrade_time_zone_support">Obsługa strefy czasowej</string>
+    <string name="why_upgrade_attendees_emails">Uczestnicy i przypomnienia e-mail</string>
+    <string name="why_upgrade_easy_event_importing">Łatwy import zdarzeń</string>
+    <string name="why_upgrade_new_widgets">Nowe widżety</string>
 
     <!-- Contacts Pro -->
-    <string name="why_upgrade_duplicate_contact_merging">Improved duplicate contact merging</string>
-    <string name="why_upgrade_speed_dial">Speed dial support</string>
-    <string name="why_upgrade_font_size_customization">Font size customization</string>
-    <string name="why_upgrade_private_contact_sharing">Optional private contact sharing within our apps</string>
+    <string name="why_upgrade_duplicate_contact_merging">Ulepszono łączenie zduplikowanych kontaktów</string>
+    <string name="why_upgrade_speed_dial">Obsługa szybkiego wybierania</string>
+    <string name="why_upgrade_font_size_customization">Dostosowywanie rozmiaru czcionki</string>
+    <string name="why_upgrade_private_contact_sharing">Opcjonalne udostępnianie kontaktów prywatnych w naszych aplikacjach</string>
 
     <!-- Notes Pro -->
-    <string name="why_upgrade_checklists">Checklists</string>
-    <string name="why_upgrade_different_note_per_widget">Different note and colors per widget</string>
+    <string name="why_upgrade_checklists">Listy kontrolne</string>
+    <string name="why_upgrade_different_note_per_widget">Różne notatki i kolory w widżetach</string>
 
     <!-- File Manager Pro -->
-    <string name="why_upgrade_date_and_time_format">Date and time format customization</string>
-    <string name="why_upgrade_shortcuts">Home screen shortcuts</string>
-    <string name="why_upgrade_file_compression">File compression support</string>
+    <string name="why_upgrade_date_and_time_format">Dostosowanie formatu daty i czasu</string>
+    <string name="why_upgrade_shortcuts">Skróty ekranu głównego</string>
+    <string name="why_upgrade_file_compression">Obsługa kompresji plików</string>
 
     <!-- Draw Pro -->
-    <string name="why_upgrade_background_color_customization">Background color customization</string>
-    <string name="why_upgrade_file_importing">File importing support</string>
+    <string name="why_upgrade_background_color_customization">Dostosowanie koloru tła</string>
+    <string name="why_upgrade_file_importing">Obsługa importu plików</string>
 
     <!-- License -->
     <string name="notice">Aplikacja korzysta z następujących bibliotek innych firm:</string>
