translating some hindi strings

--- a/commons/src/main/res/values-hi-rIN/strings.xml
+++ b/commons/src/main/res/values-hi-rIN/strings.xml
@@ -735,43 +735,43 @@
         If you want a refund anytime later, just contact us at hello@simplemobiletools.com and you will get it.</string>
 
     <!-- Pro comparison (shown in the deprecated free apps) -->
-    <string name="why_upgrade">Get the Pro version now!</string>
-    <string name="why_upgrade_basic_version">Basic</string>
-    <string name="why_upgrade_pro_version">Pro</string>
-    <string name="why_upgrade_no_ads">No ads</string>
-    <string name="why_upgrade_no_internet_access">No internet access</string>
-    <string name="why_upgrade_footer">+ 100% Money Back Guarantee</string>
+    <string name="why_upgrade">प्रो संस्करण अभी प्राप्त करें!</string>
+    <string name="why_upgrade_basic_version">बेसिक</string>
+    <string name="why_upgrade_pro_version">प्रो</string>
+    <string name="why_upgrade_no_ads">बिना विज्ञापन</string>
+    <string name="why_upgrade_no_internet_access">इन्टरनेट की जरुरत नहीं</string>
+    <string name="why_upgrade_footer">+ 100% मनी बैक गारंटी</string>
 
     <!-- Gallery Pro -->
-    <string name="why_upgrade_advanced_photo_editor">Advanced photo editor</string>
-    <string name="why_upgrade_heic_support">HEIC/HEIF file support</string>
-    <string name="why_upgrade_batch_renaming">Advanced batch file renaming</string>
-    <string name="why_upgrade_folder_locking">Individual folder locking</string>
-    <string name="why_upgrade_printing_support">Printing support</string>
+    <string name="why_upgrade_advanced_photo_editor">उन्नत फोटो एडिटर</string>
+    <string name="why_upgrade_heic_support">HEIC/HEIF फाइल सपोर्ट</string>
+    <string name="why_upgrade_batch_renaming">ढेरों फाइल एकसाथ रीनेम करें</string>
+    <string name="why_upgrade_folder_locking">व्यक्तिगत फ़ोल्डर लॉक करें</string>
+    <string name="why_upgrade_printing_support">प्रिंटिंग सपोर्ट</string>
 
     <!-- Calendar Pro -->
-    <string name="why_upgrade_time_zone_support">Time zone support</string>
-    <string name="why_upgrade_attendees_emails">Attendees and email reminders</string>
-    <string name="why_upgrade_easy_event_importing">Easy event importing</string>
-    <string name="why_upgrade_new_widgets">New widgets</string>
+    <string name="why_upgrade_time_zone_support">टाइम जोन सपोर्ट </string>
+    <string name="why_upgrade_attendees_emails">सहभागी और ईमेल रिमाइंडर</string>
+    <string name="why_upgrade_easy_event_importing">आसान इवेंट इम्पोर्ट</string>
+    <string name="why_upgrade_new_widgets">नए विजेट</string>
 
     <!-- Contacts Pro -->
-    <string name="why_upgrade_duplicate_contact_merging">Improved duplicate contact merging</string>
-    <string name="why_upgrade_font_size_customization">Font size customization</string>
-    <string name="why_upgrade_private_contact_sharing">Optional private contact sharing within our apps</string>
+    <string name="why_upgrade_duplicate_contact_merging">बेहतर डुप्लिकेट कांटेक्ट मर्जिंग</string>
+    <string name="why_upgrade_font_size_customization">फ़ॉन्ट साइज़ कस्टमाइजेशन</string>
+    <string name="why_upgrade_private_contact_sharing">हमारे एप्स के बीच प्राइवेट कांटेक्ट शेयरिंग (वैकल्पिक)</string>
 
     <!-- Notes Pro -->
-    <string name="why_upgrade_checklists">Checklists</string>
-    <string name="why_upgrade_different_note_per_widget">Different note and colors per widget</string>
+    <string name="why_upgrade_checklists">चेकलिस्ट्स</string>
+    <string name="why_upgrade_different_note_per_widget">हरेक विजेट अलग नोट और रंग में</string>
 
     <!-- File Manager Pro -->
-    <string name="why_upgrade_date_and_time_format">Date and time format customization</string>
-    <string name="why_upgrade_shortcuts">Home screen shortcuts</string>
-    <string name="why_upgrade_file_compression">File compression support</string>
+    <string name="why_upgrade_date_and_time_format">दिनांक और समय फॉर्मेट कस्टमाइजेशन</string>
+    <string name="why_upgrade_shortcuts">होम स्क्रीन शॉर्टकट</string>
+    <string name="why_upgrade_file_compression">फाइल कम्प्रेशन सपोर्ट</string>
 
     <!-- Draw Pro -->
-    <string name="why_upgrade_background_color_customization">Background color customization</string>
-    <string name="why_upgrade_file_importing">File importing support</string>
+    <string name="why_upgrade_background_color_customization">बैकग्राउंड कलर कस्टमाइजेशन</string>
+    <string name="why_upgrade_file_importing">फाइल इम्पोर्ट सपोर्ट</string>
 
     <!-- License -->
     <string name="notice">मेरा जीवन आसान करने के लिए यह एप्प तीसरे पक्ष की लाइब्रेरी का इस्तेमाल करती हैं। धन्यवाद।</string>
