--- a/commons/src/main/res/values-tr/strings.xml
+++ b/commons/src/main/res/values-tr/strings.xml
@@ -734,43 +734,43 @@
         Daha sonra istediğiniz zaman geri ödeme almak isterseniz, hello@simplemobiletools.com adresinden bizimle iletişime geçmeniz yeterlidir.</string>
 
     <!-- Pro comparison (shown in the deprecated free apps) -->
-    <string name="why_upgrade">Get the Pro version now!</string>
+    <string name="why_upgrade">﻿Pro versiyonu hemen alın!</string>
     <string name="why_upgrade_basic_version">Basic</string>
     <string name="why_upgrade_pro_version">Pro</string>
-    <string name="why_upgrade_no_ads">No ads</string>
-    <string name="why_upgrade_no_internet_access">No internet access</string>
-    <string name="why_upgrade_footer">+ 100% Money Back Guarantee</string>
+    <string name="why_upgrade_no_ads">Reklam yok</string>
+    <string name="why_upgrade_no_internet_access">İnternet erişimine gerek yok</string>
+    <string name="why_upgrade_footer">+ %100 Para İadesi Garantisi</string>
 
     <!-- Gallery Pro -->
-    <string name="why_upgrade_advanced_photo_editor">Advanced photo editor</string>
-    <string name="why_upgrade_heic_support">HEIC/HEIF file support</string>
-    <string name="why_upgrade_batch_renaming">Advanced batch file renaming</string>
-    <string name="why_upgrade_folder_locking">Individual folder locking</string>
-    <string name="why_upgrade_printing_support">Printing support</string>
+    <string name="why_upgrade_advanced_photo_editor">Gelişmiş foto editörü</string>
+    <string name="why_upgrade_heic_support">HEIC/HEIF dosya desteği</string>
+    <string name="why_upgrade_batch_renaming">Gelişmiş toplu dosya adlandırma</string>
+    <string name="why_upgrade_folder_locking">Kişisel klasör kilidi</string>
+    <string name="why_upgrade_printing_support">Yazıcı desteği</string>
 
     <!-- Calendar Pro -->
-    <string name="why_upgrade_time_zone_support">Time zone support</string>
-    <string name="why_upgrade_attendees_emails">Attendees and email reminders</string>
-    <string name="why_upgrade_easy_event_importing">Easy event importing</string>
-    <string name="why_upgrade_new_widgets">New widgets</string>
+    <string name="why_upgrade_time_zone_support">Zaman dilimi desteği</string>
+    <string name="why_upgrade_attendees_emails">Toplantı ve eposta hatırlatıcıları</string>
+    <string name="why_upgrade_easy_event_importing">Kolay etkinlik ekleme</string>
+    <string name="why_upgrade_new_widgets">Yeni aletler</string>
 
     <!-- Contacts Pro -->
-    <string name="why_upgrade_duplicate_contact_merging">Improved duplicate contact merging</string>
-    <string name="why_upgrade_font_size_customization">Font size customization</string>
-    <string name="why_upgrade_private_contact_sharing">Optional private contact sharing within our apps</string>
+    <string name="why_upgrade_duplicate_contact_merging">Rehberde tekrarlanan kişilerin birleştirilmesi</string>
+    <string name="why_upgrade_font_size_customization">Metin boyutu kişiselleştirme</string>
+    <string name="why_upgrade_private_contact_sharing">Uygulamalarımız arasında tercihe bağlı rehber bilgileri paylaşma</string>
 
     <!-- Notes Pro -->
-    <string name="why_upgrade_checklists">Checklists</string>
-    <string name="why_upgrade_different_note_per_widget">Different note and colors per widget</string>
+    <string name="why_upgrade_checklists">Kontrol listeleri</string>
+    <string name="why_upgrade_different_note_per_widget">Her araç için farklı not ve renkler</string>
 
     <!-- File Manager Pro -->
-    <string name="why_upgrade_date_and_time_format">Date and time format customization</string>
-    <string name="why_upgrade_shortcuts">Home screen shortcuts</string>
-    <string name="why_upgrade_file_compression">File compression support</string>
+    <string name="why_upgrade_date_and_time_format">Saat ve tarih formatını kişiselleştirme</string>
+    <string name="why_upgrade_shortcuts">Ana sayfada kısayollar</string>
+    <string name="why_upgrade_file_compression">Dosya sıkıştırma desteği</string>
 
     <!-- Draw Pro -->
-    <string name="why_upgrade_background_color_customization">Background color customization</string>
-    <string name="why_upgrade_file_importing">File importing support</string>
+    <string name="why_upgrade_background_color_customization">Arka plan renklerini kişiselleştirme</string>
+    <string name="why_upgrade_file_importing">Dosya ekleme desteği</string>
 
     <!-- License -->
     <string name="notice">Bu uygulama hayatımı kolaylaştırmak için aşağıdaki üçüncü taraf kitaplıklarını kullanır. Teşekkürler.</string>
