updating some spanish strings

--- a/commons/src/main/res/values-es/strings.xml
+++ b/commons/src/main/res/values-es/strings.xml
@@ -735,43 +735,43 @@
         Si quieres un rembolso en cualquier otro momento, sólo contáctanos en hello@simplemobiletools.com y lo tendrás.</string>
 
     <!-- Pro comparison (shown in the deprecated free apps) -->
-    <string name="why_upgrade">Get the Pro version now!</string>
-    <string name="why_upgrade_basic_version">Basic</string>
+    <string name="why_upgrade">¡Obtén la versión Pro ahora!</string>
+    <string name="why_upgrade_basic_version">Básica</string>
     <string name="why_upgrade_pro_version">Pro</string>
-    <string name="why_upgrade_no_ads">No ads</string>
-    <string name="why_upgrade_no_internet_access">No internet access</string>
-    <string name="why_upgrade_footer">+ 100% Money Back Guarantee</string>
+    <string name="why_upgrade_no_ads">Sin anuncios</string>
+    <string name="why_upgrade_no_internet_access">Sin acceso a Internet</string>
+    <string name="why_upgrade_footer">+ 100% de Garantía de Devolución de Dinero</string>
 
     <!-- Gallery Pro -->
-    <string name="why_upgrade_advanced_photo_editor">Advanced photo editor</string>
-    <string name="why_upgrade_heic_support">HEIC/HEIF file support</string>
-    <string name="why_upgrade_batch_renaming">Advanced batch file renaming</string>
-    <string name="why_upgrade_folder_locking">Individual folder locking</string>
-    <string name="why_upgrade_printing_support">Printing support</string>
+    <string name="why_upgrade_advanced_photo_editor">Editor de fotos avanzado</string>
+    <string name="why_upgrade_heic_support">Compatible con archivos HEIC/HEIF</string>
+    <string name="why_upgrade_batch_renaming">Cambio de nombre de archivo por lotes avanzado</string>
+    <string name="why_upgrade_folder_locking">Bloqueo de carpeta individual</string>
+    <string name="why_upgrade_printing_support">Compatible para impresión</string>
 
     <!-- Calendar Pro -->
-    <string name="why_upgrade_time_zone_support">Time zone support</string>
-    <string name="why_upgrade_attendees_emails">Attendees and email reminders</string>
-    <string name="why_upgrade_easy_event_importing">Easy event importing</string>
-    <string name="why_upgrade_new_widgets">New widgets</string>
+    <string name="why_upgrade_time_zone_support">Soporte de zona horaria</string>
+    <string name="why_upgrade_attendees_emails">Asistencia y recordatorios por correo electrónico</string>
+    <string name="why_upgrade_easy_event_importing">Importación sencilla de eventos</string>
+    <string name="why_upgrade_new_widgets">Nuevos widgets</string>
 
     <!-- Contacts Pro -->
-    <string name="why_upgrade_duplicate_contact_merging">Improved duplicate contact merging</string>
-    <string name="why_upgrade_font_size_customization">Font size customization</string>
-    <string name="why_upgrade_private_contact_sharing">Optional private contact sharing within our apps</string>
+    <string name="why_upgrade_duplicate_contact_merging">Fusión de contactos duplicados mejorada</string>
+    <string name="why_upgrade_font_size_customization">Personalización del tamaño de fuente</string>
+    <string name="why_upgrade_private_contact_sharing">Uso compartido opcional de contactos privados dentro de nuestras aplicaciones</string>
 
     <!-- Notes Pro -->
-    <string name="why_upgrade_checklists">Checklists</string>
-    <string name="why_upgrade_different_note_per_widget">Different note and colors per widget</string>
+    <string name="why_upgrade_checklists">Listas de verificación</string>
+    <string name="why_upgrade_different_note_per_widget">Diferentes notas y colores por widget</string>
 
     <!-- File Manager Pro -->
-    <string name="why_upgrade_date_and_time_format">Date and time format customization</string>
-    <string name="why_upgrade_shortcuts">Home screen shortcuts</string>
-    <string name="why_upgrade_file_compression">File compression support</string>
+    <string name="why_upgrade_date_and_time_format">Personalización del formato de fecha y hora</string>
+    <string name="why_upgrade_shortcuts">Atajos de la pantalla de inicio</string>
+    <string name="why_upgrade_file_compression">Soporte de compresión de archivos</string>
 
     <!-- Draw Pro -->
-    <string name="why_upgrade_background_color_customization">Background color customization</string>
-    <string name="why_upgrade_file_importing">File importing support</string>
+    <string name="why_upgrade_background_color_customization">Personalización del color de fondo</string>
+    <string name="why_upgrade_file_importing">Soporte de importación de archivos</string>
 
     <!-- License -->
     <string name="notice">Esta aplicación usa las siguientes bibliotecas de terceros que hacen mi vida más fácil. Gracias.</string>
